--- a/about.html
+++ b/about.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    <title>About | LIC Agent</title>
+    <title>About | LIC Agent(AJMER)</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <!-- Bootstrap CSS -->
 
     <!-- fa fa-icon-link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <!-- css-link -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="min.css">
@@ -49,7 +49,7 @@
                         <div class="col-lg-5 col-sm-4 menu-bars1">
                             <ul class="menu-bars mt-2">
                                 <li>
-                                    <a href="about.html">
+                                    <a href="About.html">
                                         <h3> About</h3>
                                     </a>
                                 </li>
