modified three main files

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
               <div class="col-lg-5 col-sm-4 menu-bars1">
                 <ul class="menu-bars mt-2">
                   <li>
-                    <a href="about.html">
+                    <a href="index.html">
                       <h3>About</h3>
                     </a>
                   </li>
@@ -332,7 +332,7 @@
                   <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                  <a href="about.html">About</a>
+                  <a href="index.html">About</a>
                 </li>
               </ul>
             </div>
