--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,8 @@
                         <div class="col-lg-5 col-sm-4 menu-bars1">
                             <ul class="menu-bars mt-2">
                                 <li>
-                                    <a href="about.html">
+                                    <a href="index.html">
+
                                         <h3> About</h3>
                                     </a>
                                 </li>
@@ -346,8 +347,8 @@
                                 <a href="gallery.html">Gallery</a>
                             </li>
                             <li>
-                                <a href="about.html">About</a>
-                            </li>
+                                <a href="index.html">About</a>
+                                </li>
                         </ul>
 
                     </div>
@@ -359,7 +360,7 @@
 
 
 
-    <section class="" id="Modal-First">
+    <!-- <section class="" id="Modal-First">
 
         <div class="container">
             <div class="row">
@@ -426,7 +427,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Optional JavaScript -->
     <script src="script.js"></script>
