--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="col-lg-5 col-sm-4 menu-bars1">
                             <ul class="menu-bars mt-2">
                                 <li>
-                                    <a href="About.html">
+                                    <a href="index.html">
                                         <h3> About</h3>
                                     </a>
                                 </li>
@@ -520,8 +520,8 @@
                                 <a href="gallery.html">Gallery</a>
                             </li>
                             <li>
-                                <a href="about.html">About</a>
-                            </li>
+                                <a href="index.html">About</a>
+                                </li>
                         </ul>
 
                     </div>
